--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'jacoco'
 }
 
 group 'org.example'
@@ -10,8 +11,17 @@ repositories {
 }
 
 dependencies {
+    testImplementation('junit:junit:4.13')
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.11.0.rc1'
     compile 'org.apache.commons:commons-io:1.3.2'
     testCompile group: 'org.testfx', name: 'testfx-junit', version: '4.0.1-alpha'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "org.testfx:testfx-core:4.0.+"
+    testCompile "org.testfx:testfx-junit:4.0.+"
+    testCompile group: 'org.junit.vintage', name: 'junit-vintage-engine', version: '5.7.0-M1'
+    testCompile group: 'org.testfx', name: 'testfx-core', version: '4.0.15-alpha'
+}
+test {
+    useJUnitPlatform()
 }
