--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,26 @@ repositories {
     mavenCentral()
 }
 
+jar {
+    from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
+    manifest {
+        attributes(
+                'Implementation-Title': 'Jar Making Exaple',
+                "Main-Class": "com.hmtmcse.tool.Bismillah"
+        )
+    }
+    destinationDirectory = file("$rootDir/my-jar")
+    archivesBaseName = 'app'
+}
+
+
+// All Git repository List
+def repositoryMap =  [
+        "java-common" : "https://github.com/iuliadrgn/SistemGestionareCafenea",
+]
+
 dependencies {
     testImplementation('junit:junit:4.13')
     testCompile group: 'junit', name: 'junit', version: '4.12'
